<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_add" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/save"
        android:layout_below="@id/toolbar"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/debtor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:checked="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/debtor"
                    android:padding="12dp"
                    android:text="@string/i_am_the_debtor"
                    android:textSize="16sp" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditorLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/creditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/creditor_name"
                    android:paddingBottom="16dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/until"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/return_until"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/edit"
                    android:layout_toEndOf="@id/until"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/date_is_not_selected"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/edit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/application_menu"
                    android:src="@drawable/ic_edit"
                    android:tint="@color/colorPrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sumLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@id/currency">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sum"
                        android:inputType="number"
                        android:paddingBottom="16dp"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/Currencies" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/save" />
</RelativeLayout>